--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
         background-color: #1E326D;
     }
    #grid {
-       background-color: #1F42B6;
-       display: inline-block;
+        background-color: #1F42B6;
+        display: inline-block;
         text-align: center;
    }
-
 
    .coin {
        width: 70px;
@@ -64,7 +63,7 @@
         }
         
         // check if class name exists in current element. 
-        const hasClassName = (str, className) => str.includes(className);
+        // const hasClassName = (str, className) => str.includes(className);
 
         grid.addEventListener('click',function(event){
             event.preventDefault();
@@ -78,12 +77,75 @@
                     event.target.className += ` player${currentPlayer}`;
                     data[r][c] = currentPlayer; 
 
-                    currentPlayer = (currentPlayer === 1)? 2 : 1;                    
+                    // check win
+                    const win = isWinningPiece(data, currentPlayer);
+                    if(win) console.log(`Player: ${currentPlayer} wins!`)
+                    // flip players
+                    currentPlayer = (currentPlayer === 1)? 2 : 1; 
                 }
-           
             }
-
         })
+
+        var checkHorizontal = function _checkHorizontal(board, player){
+            for(let r = 0; r < ROW; ++r){
+                for(let c = 0; c < COL-3; ++c){
+                    if(board[r][c] === player && 
+                        board[r][c+1] === player && 
+                            board[r][c+2] === player && 
+                                board[r][c+3] === player)
+                                    return true;
+                }
+            }
+            return false;
+        }
+        var checkVertical = function _checkVertical(board, player){
+            for(let c = 0; c < COL; ++c){
+                for(let r = 0; r < ROW-3; ++r){
+                    if(board[r][c] === player && 
+                        board[r+1][c] === player && 
+                            board[r+2][c] === player && 
+                                board[r+3][c] === player)
+                                    return true;
+                }
+            }
+        }
+
+        var checkDiagonalForward = function _checkDiagonal(board, player){
+            for(let c = 0; c < COL-3; ++c){
+                for(let r = 0; r < ROW-3; ++r){
+                    if(board[r][c] === player &&
+                        board[r+1][c+1] === player && 
+                            board[r+2][c+2] === player && 
+                                board[r+3][c+3] === player)
+                                    return true;
+                }
+            }
+            return false;
+        }
+        var checkDiagonalReverse = function _checkDiagonalReverse(board, player){
+            for(let c = 0; c < COL-3; ++c){
+                for(let r = 3; r < ROW; ++r){
+                    if(board[r][c] === player &&
+                        board[r-1][c+1] === player && 
+                            board[r-2][c+2] === player && 
+                                board[r-3][c+3] === player)
+                                    return true;
+                }
+            }
+        }
+
+
+        var isWinningPiece = function _isWinningPiece(board, player)
+        {
+            if(checkHorizontal(board, player) || 
+                checkVertical(board, player) || 
+                    checkDiagonalForward(board, player) || 
+                        checkDiagonalReverse(board, player))
+                            return true;
+
+            return false;
+        }
+   
 
     </script>
 </body>
